--- a/tp3com2-dominguez-pablo/src/css/mainContact.css
+++ b/tp3com2-dominguez-pablo/src/css/mainContact.css
@@ -2,6 +2,6 @@
     border: 1px solid #000000;
     border-radius: 5px;
     padding: 40px;
-    background-color: gray;
-    box-shadow: 5px 10px 14px rgba(9, 9, 9, 0.1);
+    background-color: #4f9cf3;
+    box-shadow: 5px 10px 14px rgb(9, 9, 9);
 }
