--- a/tp3com2-dominguez-pablo/src/css/mainProjects.css
+++ b/tp3com2-dominguez-pablo/src/css/mainProjects.css
@@ -1,13 +1,31 @@
 .cards {
-    transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1), 
-                box-shadow 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-    box-shadow: 3px 5px 10px rgba(0,0,0,0.08);
     border-radius: 12px;
+    border: 1px solid black ;
+    background-color: #4f9cf3;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px;
+    width: 600px;
+
 }
 
 .cards:hover {
-    transform: scale(1.05) translateY(-5px);
-    box-shadow: 0 8px 24px rgba(0,0,0,0.18);
-    background-color: rgb(15, 105, 15);
+    transform: scale(1.01) translateY(-1px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 212, 1);
+    border: 1px solid rgba(0, 0, 212, 1);
+}
+
+.cardsImg{
+    border-radius: 12px 12px 0px 0px;
+    object-fit: cover;
+    width: 100%;
+    height: 300px;
+}
+
+.btn{
+    box-shadow: 5px 5px 10px rgb(0, 0, 0);
+    border: 1px solid rgb(87, 87, 87);
 }
 
